random_field/jitfailure-dolfin_expression_b34fbc674ce131653e6d72e3d0d8e3e2/error.log
/var/folders/br/kqx4wrcd4yn6zmk5jlrz9r7c0000gn/T/tmple079qv8/dolfin_expression_b34fbc674ce131653e6d72e3d0d8e3e2.cpp:64:41: error: no matching function for call to 'sin'
          values[0] = w_j /pow(j,alpha)*sin(j*pi*x);
                                        ^~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/math.h:329:15: note: candidate function not viable: no known conversion from 'const CwiseBinaryOp<internal::scalar_product_op<typename internal::promote_scalar_arg<Scalar, double, (Eigen::internal::has_ReturnType<Eigen::ScalarBinaryOpTraits<double, Scalar, Eigen::internal::scalar_product_op<double, Scalar>>>::value)>::type, typename internal::traits<Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>>::Scalar>, const typename internal::plain_constant_type<Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>, typename internal::promote_scalar_arg<Scalar, double, (Eigen::internal::has_ReturnType<Eigen::ScalarBinaryOpTraits<double, Scalar, Eigen::internal::scalar_product_op<double, Scalar>>>::value)>::type>::type, const Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>>' (aka 'const CwiseBinaryOp<scalar_product_op<double, double>, const CwiseNullaryOp<scalar_constant_op<double>, const Eigen::Matrix<double, -1, 1, 0, -1, 1>>, const Eigen::Ref<const Eigen::Matrix<double, -1, 1, 0, -1, 1>, 0, Eigen::InnerStride<1>>>') to 'double' for 1st argument
extern double sin(double);
              ^
/Users/naoki/miniconda3/envs/fenicsproject/bin/../include/c++/v1/math.h:893:42: note: candidate function not viable: no known conversion from 'const CwiseBinaryOp<internal::scalar_product_op<typename internal::promote_scalar_arg<Scalar, double, (Eigen::internal::has_ReturnType<Eigen::ScalarBinaryOpTraits<double, Scalar, Eigen::internal::scalar_product_op<double, Scalar>>>::value)>::type, typename internal::traits<Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>>::Scalar>, const typename internal::plain_constant_type<Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>, typename internal::promote_scalar_arg<Scalar, double, (Eigen::internal::has_ReturnType<Eigen::ScalarBinaryOpTraits<double, Scalar, Eigen::internal::scalar_product_op<double, Scalar>>>::value)>::type>::type, const Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>>' (aka 'const CwiseBinaryOp<scalar_product_op<double, double>, const CwiseNullaryOp<scalar_constant_op<double>, const Eigen::Matrix<double, -1, 1, 0, -1, 1>>, const Eigen::Ref<const Eigen::Matrix<double, -1, 1, 0, -1, 1>, 0, Eigen::InnerStride<1>>>') to 'float' for 1st argument
inline _LIBCPP_HIDE_FROM_ABI float       sin(float __x) _NOEXCEPT       {return __builtin_sinf(__x);}
                                         ^
/Users/naoki/miniconda3/envs/fenicsproject/bin/../include/c++/v1/math.h:896:30: note: candidate function not viable: no known conversion from 'const CwiseBinaryOp<internal::scalar_product_op<typename internal::promote_scalar_arg<Scalar, double, (Eigen::internal::has_ReturnType<Eigen::ScalarBinaryOpTraits<double, Scalar, Eigen::internal::scalar_product_op<double, Scalar>>>::value)>::type, typename internal::traits<Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>>::Scalar>, const typename internal::plain_constant_type<Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>, typename internal::promote_scalar_arg<Scalar, double, (Eigen::internal::has_ReturnType<Eigen::ScalarBinaryOpTraits<double, Scalar, Eigen::internal::scalar_product_op<double, Scalar>>>::value)>::type>::type, const Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>>' (aka 'const CwiseBinaryOp<scalar_product_op<double, double>, const CwiseNullaryOp<scalar_constant_op<double>, const Eigen::Matrix<double, -1, 1, 0, -1, 1>>, const Eigen::Ref<const Eigen::Matrix<double, -1, 1, 0, -1, 1>, 0, Eigen::InnerStride<1>>>') to 'double' for 1st argument
_LIBCPP_HIDE_FROM_ABI double sin(double __x) _NOEXCEPT {
                             ^
/Users/naoki/miniconda3/envs/fenicsproject/bin/../include/c++/v1/math.h:900:42: note: candidate function not viable: no known conversion from 'const CwiseBinaryOp<internal::scalar_product_op<typename internal::promote_scalar_arg<Scalar, double, (Eigen::internal::has_ReturnType<Eigen::ScalarBinaryOpTraits<double, Scalar, Eigen::internal::scalar_product_op<double, Scalar>>>::value)>::type, typename internal::traits<Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>>::Scalar>, const typename internal::plain_constant_type<Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>, typename internal::promote_scalar_arg<Scalar, double, (Eigen::internal::has_ReturnType<Eigen::ScalarBinaryOpTraits<double, Scalar, Eigen::internal::scalar_product_op<double, Scalar>>>::value)>::type>::type, const Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>>' (aka 'const CwiseBinaryOp<scalar_product_op<double, double>, const CwiseNullaryOp<scalar_constant_op<double>, const Eigen::Matrix<double, -1, 1, 0, -1, 1>>, const Eigen::Ref<const Eigen::Matrix<double, -1, 1, 0, -1, 1>, 0, Eigen::InnerStride<1>>>') to 'long double' for 1st argument
inline _LIBCPP_HIDE_FROM_ABI long double sin(long double __x) _NOEXCEPT {return __builtin_sinl(__x);}
                                         ^
/Users/naoki/miniconda3/envs/fenicsproject/bin/../include/c++/v1/complex:1423:1: note: candidate template ignored: could not match 'complex' against 'CwiseBinaryOp'
sin(const complex<_Tp>& __x)
^
/Users/naoki/miniconda3/envs/fenicsproject/bin/../include/c++/v1/math.h:906:1: note: candidate template ignored: requirement 'std::is_integral<Eigen::CwiseBinaryOp<Eigen::internal::scalar_product_op<double, double>, const Eigen::CwiseNullaryOp<Eigen::internal::scalar_constant_op<double>, const Eigen::Matrix<double, -1, 1, 0, -1, 1>>, const Eigen::Ref<const Eigen::Matrix<double, -1, 1, 0, -1, 1>, 0, Eigen::InnerStride<1>>>>::value' was not satisfied [with _A1 = CwiseBinaryOp<internal::scalar_product_op<typename internal::promote_scalar_arg<Scalar, double, (Eigen::internal::has_ReturnType<Eigen::ScalarBinaryOpTraits<double, Scalar, Eigen::internal::scalar_product_op<double, Scalar>>>::value)>::type, typename internal::traits<Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>>::Scalar>, const typename internal::plain_constant_type<Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>, typename internal::promote_scalar_arg<Scalar, double, (Eigen::internal::has_ReturnType<Eigen::ScalarBinaryOpTraits<double, Scalar, Eigen::internal::scalar_product_op<double, Scalar>>>::value)>::type>::type, const Ref<const Matrix<double, -1, 1, 0, -1, 1>, 0, InnerStride<1>>>]
sin(_A1 __x) _NOEXCEPT {return __builtin_sin((double)__x);}
^
/Users/naoki/miniconda3/envs/fenicsproject/include/eigen3/Eigen/src/Core/GlobalFunctions.h:60:36: note: candidate template ignored: could not match 'ArrayBase' against 'CwiseBinaryOp'
  EIGEN_ARRAY_DECLARE_GLOBAL_UNARY(sin,scalar_sin_op,sine,\sa ArrayBase::sin)
                                   ^
1 error generated.
